@@ -1,3 +1,8 @@
+2007-01-30	Tom Insam <tom@jerakeen.org>
+
+  * Added daap.songgenre, daap.songyear, and daap.songtracknumber to the
+    meta information retrieved by the client.
+
 2006-10-11	Tom Insam <tom@jerakeen.org>
 
   * At the request of philippe.normand@gmail.com, explicitly licensed
